# bam-test

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: settings.cuh
scripts/: block-test.ipynb  block-test.py
scripts/random-read/: bam-qd1024-nq1-bs1-nb1048576-ps8192-read-random-nio1.txt  bam-qd1024-nq1-bs1-nb16777216-ps512-read-random-nio1.txt  bam-qd1024-nq1-bs1-nb2097152-ps4096-read-random-nio1.txt  bam-qd1024-nq1-bs1-nb4194304-ps2048-read-random-nio1.txt  bam-qd1024-nq1-bs1-nb524288-ps16384-read-random-nio1.txt  bam-qd1024-nq1-bs1-nb8388608-ps1024-read-random-nio1.txt  our-qd1024-nq1-bs1-nb1048576-ps8192-read-random-nio1.txt  our-qd1024-nq1-bs1-nb16777216-ps512-read-random-nio1.txt  our-qd1024-nq1-bs1-nb2097152-ps4096-read-random-nio1.txt  our-qd1024-nq1-bs1-nb4194304-ps2048-read-random-nio1.txt  our-qd1024-nq1-bs1-nb524288-ps16384-read-random-nio1.txt  our-qd1024-nq1-bs1-nb8388608-ps1024-read-random-nio1.txt
scripts/random-write/: bam-qd1024-nq1-bs1-nb1048576-ps8192-write-random-nio1.txt  bam-qd1024-nq1-bs1-nb16777216-ps512-write-random-nio1.txt  bam-qd1024-nq1-bs1-nb2097152-ps4096-write-random-nio1.txt  bam-qd1024-nq1-bs1-nb4194304-ps2048-write-random-nio1.txt  bam-qd1024-nq1-bs1-nb524288-ps16384-write-random-nio1.txt  bam-qd1024-nq1-bs1-nb8388608-ps1024-write-random-nio1.txt  our-qd1024-nq1-bs1-nb1048576-ps8192-write-random-nio1.txt  our-qd1024-nq1-bs1-nb16777216-ps512-write-random-nio1.txt  our-qd1024-nq1-bs1-nb2097152-ps4096-write-random-nio1.txt  our-qd1024-nq1-bs1-nb4194304-ps2048-write-random-nio1.txt  our-qd1024-nq1-bs1-nb524288-ps16384-write-random-nio1.txt  our-qd1024-nq1-bs1-nb8388608-ps1024-write-random-nio1.txt
scripts/results/: qd1024_nq1_bs1024_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs16_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb1024_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb16384_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb16_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb256_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb2_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb4096_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb4_ps4096_it0_im1.txt  qd1024_nq1_bs1_nb64_ps4096_it0_im1.txt  qd1024_nq1_bs256_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs2_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs32_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs4_nb1_ps4096_it0_im1.txt  qd1024_nq1_bs64_nb1_ps4096_it0_im1.txt  qd2_nq1_bs1_nb1_ps4096_it0_im1.txt  qd2_nq1_bs1_nb2_ps4096_it0_im1.txt  qd2_nq1_bs1_nb4_ps4096_it0_im1.txt  qd2_nq1_bs1_nb8_ps4096_it0_im1.txt  qd2_nq1_bs2_nb1_ps4096_it0_im1.txt  qd2_nq1_bs2_nb2_ps4096_it0_im1.txt  qd2_nq1_bs2_nb4_ps4096_it0_im1.txt  qd2_nq1_bs2_nb8_ps4096_it0_im1.txt  qd2_nq1_bs4_nb1_ps4096_it0_im1.txt  qd2_nq1_bs4_nb2_ps4096_it0_im1.txt  qd2_nq1_bs4_nb4_ps4096_it0_im1.txt  qd2_nq1_bs4_nb8_ps4096_it0_im1.txt  qd2_nq2_bs1_nb1_ps4096_it0_im1.txt  qd2_nq2_bs1_nb2_ps4096_it0_im1.txt  qd2_nq2_bs1_nb4_ps4096_it0_im1.txt  qd2_nq2_bs1_nb8_ps4096_it0_im1.txt  qd2_nq2_bs2_nb1_ps4096_it0_im1.txt  qd2_nq2_bs2_nb2_ps4096_it0_im1.txt  qd2_nq2_bs2_nb4_ps4096_it0_im1.txt  qd2_nq2_bs2_nb8_ps4096_it0_im1.txt  qd2_nq2_bs4_nb1_ps4096_it0_im1.txt  qd2_nq2_bs4_nb2_ps4096_it0_im1.txt  qd2_nq2_bs4_nb4_ps4096_it0_im1.txt  qd2_nq2_bs4_nb8_ps4096_it0_im1.txt  (+84 more)
src/: array.cu  block-test.cu
